<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">智慧农业_王鹏飞</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="version_string">欢迎进入\n智能农业系统!\n版本号：20.6.09</string>
    <string name="login_str">登录</string>
    <string name="register_str">用户注册</string>
    <string name="setting_ip_str">Ip设置</string>
    <string name="username_hint_str">请输入用户名</string>
    <string name="password_str">请输入密码</string>
    <string name="ok_str">确定</string>
    <string name="input_ip_address">请输入IP的地址</string>
    <string name="prompt">提示</string>
    <string name="no_new_work">没有网络</string>
    <string name="failed">操作失败</string>
    <string name="login_wait">登录中</string>
    <string name="username_no_empty">用户名不能为空！</string>
    <string name="password_no_empty">密码不能为空！</string>
    
    
    <string name="light_title">Light</string>
	<string name="set_value">设定值：</string>
	<string name="value">8888</string>
	<string name="warning">预警</string>
	<string name="normal">正常</string>
	
	<string name="current_status">当前状态:</string>
<string name="water_pump">水泵</string>
<string name="blower">风扇</string>
<string name="road_lamp">光照</string>
<string name="buzzer">报警</string>
<string name="open_str">打开</string>
<string name="close_str">关闭</string>


	<string name="waiter">加载中...</string>
	
<string name="language_seting">语言设置</string>
	<string name="auto_control">自动控制</string>
<string name="pm25_threshold_value_setting">PM2.5阀值设置</string>
<string name="co2_threshold_value_setting">CO2浓度阀值设置</string>
<string name="light_threshold_value_setting">光照强度阀值设置</string>
<string name="air_threshold_value_setting">空气温湿度阀值设置</string>
<string name="soil_threshold_value_setting">土壤温湿度阀值设置</string>
		<string name="air_humi_threshold_value_setting">空气湿度阈值设置</string>
		<string name="air_temp_threshold_value_setting">空气温度阈值设置</string>
		




<string name="min_value">最小值</string><string name="max_value">最大值</string>
<string name="min_max_value_not_empty">最小值或最大值不能为空!</string>
<string name="setting_failed">设置失败！</string>
<string name="no_authority_exp">对不起，您没有该控制权限！</string>
<string name="no_setting_authority_exp">对不起，您没有该设置权限！</string>
<string name="not_show_next_time">下次启动时显示用户引导界面</string>

	<string name="setting_str">设置</string>
	

	
	
	
</resources>
