<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical" >
    
<TextView
    android:id="@+id/name_text_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/buzzer"
    android:textColor="@android:color/black"
    android:textSize="28sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/status_text_view"
    style="@style/FontSize"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/current_status"
	android:textColor="@android:color/black" />

<ImageView
    android:id="@+id/controller_icon"
    android:layout_width="150dp"
    android:layout_height="150dp"
	android:layout_marginBottom="10dp"
	android:layout_marginTop="10dp"
	android:contentDescription="@string/app_name"
	android:src="@drawable/buzzer_on" />
<TextView
	android:id="@+id/open_text_view"
	style="@style/FontSize"
	android:layout_width="150dp"
	android:layout_height="50dp"
	android:layout_marginLeft="30dp"
	android:layout_marginRight="30dp"
	android:background="@drawable/btn_blue"
	android:gravity="center"
	android:text="@string/open_str"
	android:textColor="@android:color/white" />

</LinearLayout>