<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/sensor_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_bg_green"
    
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip">
        
        <TextView 
            android:id="@+id/sensor_name_text"
            style="@style/FontSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_horizontal"
            android:text="@string/light_title"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <TextView 
            android:id="@+id/status_text"
            style="@style/FontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/warning"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        
        
    </LinearLayout>
    
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip">
        
        <TextView 
            android:id="@+id/set_value_text"
            style="@style/FontSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_horizontal"
            android:text="@string/set_value"
            android:textColor="@color/white"
            />
        <TextView 
            android:id="@+id/sensor_value_text"

            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_marginRight="10dip"
            android:textSize="50dp"
            android:background="@drawable/sensor_value_bg"
            android:gravity="center"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        
        
    </LinearLayout>
    

</LinearLayout>
